resources/hello-world/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: nodeset.vv
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
