resources/hello-world/subdomain-ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-subdomain
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello.nodeset.vv
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
